@@ -1,8 +1,8 @@
 sdparm (1.02-0.1) unstable; urgency=low
 
-  * xxxxxxxxxxxxxxxx
+  * add block device characteristics VPD page
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Wed, 06 Jun 2007 18:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.org>  Wed, 11 Jul 2007 19:00:00 -0400
 
 sdparm (1.01-0.1) unstable; urgency=low
 
