@@ -2,11 +2,12 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.02 [20070606]
+ChangeLog for sdparm-1.02 [20070711]
   - append relative target port identifier to SAS target
     port address with '-iq' option
   - add solaris port
   - place vendor specific data in sdparm_data_vendor.c
+  - add block device characteristics VPD page
 
 ChangeLog for sdparm-1.01 [20070405]
   - add element address assignment mode page (smc)
